# EDA_SMKNN

./: .gitignore  CMakeLists.txt  DS1.csv  README.md  dataset.txt  dataset1.txt  knn_result.json  main.cpp  metrics.json  script.py  script_metrics.py  visualize_olivetti_knn.py
Frontend/: ExportVisualizationFiles.h  data.csv  render_knn_graph.py  render_knn_graph_animated.py  render_knn_intercluster_edges.py  render_knn_merge.py  render_knn_split.py  visualization.json
Knn_Interface/: knn_graph_builder.h  knn_strategy.cpp  knn_strategy.h
RStarTree/: Entry.cpp  Entry.h  Mbb.cpp  Mbb.h  Node.cpp  Node.h  Point.cpp  Point.h  Rtree.cpp  Rtree.h
Rtree/: Mbb.h  Node.h
SMKNN/: Merge.cpp  Merge.h  Splitt.cpp  Splitt.h
datasets/Real/: haberman.csv  hill_valley.csv  hill_valley.py  liver_disorders.csv  liver_disorders.py  pendigits.csv  pendigits.py  save_python.py  semeion.csv  semeion.py  sonar.csv  soybean.csv  vowel.csv  vowel.py
datasets/Synthetic/: DS1.csv  DS1.py  DS10.csv  DS2.csv  DS2.py  DS3.csv  DS3.py  DS4.csv  DS4.py  DS5.csv  DS6.csv  DS6.py  DS8.csv  DS9.csv  DS9.py  plot_csv.py  plot_txt.py  txt_to_csv.py
datasets/olivetti/: olivetti.py
